--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,8 @@ raw_data/
 showtasks/migrations/0001_initial.py
 templates/.DS_Store
 workinterface/.DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
