--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,50 @@
-djangorestframework
-markdown
-django-filter
-pandas
-scipy
-numpy
-Django
-coreapi
-django-filter
-django-crispy-forms
-django-guardian
-pygments
-django-debug-toolbar
-django-extensions
-django-estimators
-django-background-tasks
-psycopg2
-scikit-learn
-django-countries
+appnope==0.1.0
+backcall==0.1.0
+certifi==2018.1.18
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+decorator==4.3.0
+dill==0.2.5
+Django==2.0.3
+django-background-tasks==1.1.13
+django-compat==1.0.15
+django-countries==5.3
+django-crispy-forms==1.7.2
+django-debug-toolbar==1.9.1
+django-estimators==0.2.1
+django-extensions==2.0.6
+django-filter==1.1.0
+django-guardian==1.4.9
+djangorestframework==3.7.7
+httpie==0.9.9
+idna==2.6
+ipython==6.4.0
+ipython-genutils==0.2.0
+itypes==1.1.0
+jedi==0.12.0
+Jinja2==2.10
+Markdown==2.6.11
+MarkupSafe==1.0
+numpy==1.14.2
+pandas==0.22.0
+parso==0.2.0
+pexpect==4.5.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+psycopg2==2.7.4
+ptyprocess==0.5.2
+Pygments==2.2.0
+pymongo==3.6.1
+python-dateutil==2.7.2
+pytz==2018.3
+requests==2.18.4
+scikit-learn==0.19.1
+scipy==1.0.1
+simplegeneric==0.8.1
+six==1.11.0
+sqlparse==0.2.4
+traitlets==4.3.2
+uritemplate==3.0.0
+urllib3==1.22
+wcwidth==0.1.7
