elasticbean config added TODO: Aggregations for dashboard

--- a/.ebextensions/02_db-migrate.config
+++ b/.ebextensions/02_db-migrate.config
@@ -5,3 +5,5 @@ container_commands:
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: crowdcur_server.settings
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: crowdcur_server/wsgi.py
