--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appnope==0.1.0
 backcall==0.1.0
+boto3==1.7.23
+botocore==1.10.23
 certifi==2018.1.18
 chardet==3.0.4
 coreapi==2.3.3
@@ -16,7 +18,9 @@ django-estimators==0.2.1
 django-extensions==2.0.6
 django-filter==1.1.0
 django-guardian==1.4.9
+django-storages==1.6.6
 djangorestframework==3.7.7
+docutils==0.14
 httpie==0.9.9
 idna==2.6
 ipython==6.4.0
@@ -24,6 +28,7 @@ ipython-genutils==0.2.0
 itypes==1.1.0
 jedi==0.12.0
 Jinja2==2.10
+jmespath==0.9.3
 Markdown==2.6.11
 MarkupSafe==1.0
 numpy==1.14.2
@@ -39,6 +44,7 @@ pymongo==3.6.1
 python-dateutil==2.7.2
 pytz==2018.3
 requests==2.18.4
+s3transfer==0.1.13
 scikit-learn==0.19.1
 scipy==1.0.1
 simplegeneric==0.8.1
