--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ boto3==1.7.23
 botocore==1.10.23
 certifi==2018.1.18
 chardet==3.0.4
+click==6.7
 coreapi==2.3.3
 coreschema==0.0.4
+cubes==1.1
 decorator==4.3.0
 dill==0.2.5
 Django==2.0.3
@@ -21,14 +23,19 @@ django-guardian==1.4.9
 django-storages==1.6.6
 djangorestframework==3.7.7
 docutils==0.14
+expressions==0.2.3
+Flask==1.0.2
+grako==3.99.9
 httpie==0.9.9
 idna==2.6
 ipython==6.4.0
 ipython-genutils==0.2.0
+itsdangerous==0.24
 itypes==1.1.0
 jedi==0.12.0
 Jinja2==2.10
 jmespath==0.9.3
+jsonschema==2.6.0
 Markdown==2.6.11
 MarkupSafe==1.0
 numpy==1.14.2
@@ -40,6 +47,7 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.4
 ptyprocess==0.5.2
 Pygments==2.2.0
+pygraphviz==1.3.1
 pymongo==3.6.1
 python-dateutil==2.7.2
 pytz==2018.3
@@ -49,9 +57,10 @@ scikit-learn==0.19.1
 scipy==1.0.1
 simplegeneric==0.8.1
 six==1.11.0
+SQLAlchemy==1.2.7
 sqlparse==0.2.4
 traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.22
 wcwidth==0.1.7
-cubes[all]
+Werkzeug==0.14.1
