--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,6 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.4
 ptyprocess==0.5.2
 Pygments==2.2.0
-pygraphviz==1.3.1
 pymongo==3.6.1
 python-dateutil==2.7.2
 pytz==2018.3
@@ -57,7 +56,7 @@ scikit-learn==0.19.1
 scipy==1.0.1
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.2.7
+SQLAlchemy
 sqlparse==0.2.4
 traitlets==4.3.2
 uritemplate==3.0.0
