Cube server config added

--- a/cube/slicer.ini
+++ b/cube/slicer.ini
@@ -1,10 +1,19 @@
 [workspace]
-models_directory = ./models
+log_level: info
 
-[models]
-worker_info = worker_info.json
+[server]
+host: localhost
+port: 5000
+reload: yes
+prettyprint: yes
+allow_cors_origin: *
 
 
 [store]
 type = sql
 url = postgresql://Payam@localhost:5432/crowdcur_server
+url = postgresql://crowdcur:payam123@aa63i1lumr202r.cz3xrjrvklqy.us-east-1.rds.amazonaws.com:5432/ebdb
+[models]
+main: model3.json
+
+
