--- a/cube/slicer3.ini
+++ b/cube/slicer3.ini
@@ -7,11 +7,11 @@ port: 5000
 reload: yes
 prettyprint: yes
 allow_cors_origin: *
-debug: yes
+
 
 [store]
 type = sql
-url = postgresql://Payam@localhost:5432/crowdcur_server
+url = postgresql://crowdcur:payam123@aa63i1lumr202r.cz3xrjrvklqy.us-east-1.rds.amazonaws.com:5432/ebdb
 
 [models]
 main: model3.json
