Cube server config added

--- a/.ebextensions/03_cubeserver.config
+++ b/.ebextensions/03_cubeserver.config
@@ -5,7 +5,7 @@ files:
     group: root
     content: |
       <VirtualHost *:5000>
-      ServerName crowdcur.com
+      ServerName localhost
 
       WSGIScriptAlias / /opt/python/current/cube/app.wsgi.py
 
