Cube server config added

--- a/.ebextensions/03_cubeserver.config
+++ b/.ebextensions/03_cubeserver.config
@@ -10,9 +10,12 @@ files:
       WSGIScriptAlias / /opt/python/current/cube/app.wsgi.py
 
       <Directory /opt/python/current/cube>
-      Order deny,allow
-      Allow from all
+      Require all granted
       </Directory>
-
+      WSGIDaemonProcess wsgi processes=1 threads=15 display-name=%{GROUP} \
+      python-home=/opt/python/run/venv/ \
+      python-path=/opt/python/current/app:/opt/python/run/venv/lib64/python3.6/site-packages:/opt/python/run/venv/lib/python3.6/site-packages user=wsgi group=wsgi \
+      home=/opt/python/current/app
+      WSGIProcessGroup wsgi
       </VirtualHost>
 
