Cube server config added

--- a/.ebextensions/03_cubeserver.config
+++ b/.ebextensions/03_cubeserver.config
@@ -12,7 +12,8 @@ files:
       <Directory /opt/python/current/cube>
       WSGIProcessGroup wsgi
       WSGIApplicationGroup %{GLOBAL}
-      Require all granted
+      Order deny,allow
+      Allow from all
       </Directory>
 
 
