Fixed cube server

--- a/.ebextensions/03_cubeserver.config
+++ b/.ebextensions/03_cubeserver.config
@@ -4,16 +4,16 @@ files:
     owner: root
     group: root
     content: |
+      Listen 5000
       <VirtualHost *:5000>
       ServerName localhost
 
-      WSGIScriptAlias / /opt/python/current/cube/app.wsgi.py
+      WSGIScriptAlias / /opt/python/current/app/cube/app.wsgi.py
 
-      <Directory /opt/python/current/cube>
+      <Directory /opt/python/current/app/cube>
       WSGIProcessGroup wsgi
       WSGIApplicationGroup %{GLOBAL}
-      Order deny,allow
-      Allow from all
+      Require all granted
       </Directory>
 
 
