--- a/.ebextensions/03_cubeserver.config
+++ b/.ebextensions/03_cubeserver.config
@@ -11,9 +11,10 @@ files:
       WSGIScriptAlias / /opt/python/current/app/cube/app.wsgi.py
 
       <Directory /opt/python/current/app/cube>
-      WSGIProcessGroup wsgi
       Require all granted
       </Directory>
+      WSGIDaemonProcess wsgi_cube processes=1 threads=5 display-name=%{GROUP} python-home=/opt/python/run/venv/ python-path=/opt/python/current/app:/opt/python/run/venv/lib64/python3.6/site-packages:/opt/python/run/venv/lib/python3.6/site-packages user=wsgi group=wsgi home=/opt/python/current/app
+      WSGIProcessGroup wsgi_cube
 
 
       </VirtualHost>
