Fixed cube server

--- a/cube/slicer3.ini
+++ b/cube/slicer3.ini
@@ -1,11 +1,13 @@
 [workspace]
 log_level: info
+log: /opt/python/current/app/cube/logs
 
 [server]
+host: 0.0.0.0
+port: 5000
 reload: yes
 prettyprint: yes
 allow_cors_origin: *
-
 
 [store]
 type = sql
